# JANUS-ROV-communicator

./: .gitignore  LICENSE  README.md  ost.txt
src/cpp_communicator/: CMakeLists.txt  (+1 more)
src/nodecomx_cpp_py/: CMakeLists.txt  package.xml
src/nodecomx_cpp_py/include/lib/Evo_janusXsdm/: Evo_janusXsdm.cpp
src/nodecomx_cpp_py/include/lib/fftw/fftw-3.3.10/: Makefile  config.status  libtool
src/nodecomx_cpp_py/include/lib/fftw/fftw-3.3.10/api/: Makefile
src/nodecomx_cpp_py/include/lib/fftw/fftw-3.3.10/dft/: Makefile
src/nodecomx_cpp_py/include/lib/fftw/fftw-3.3.10/doc/: Makefile
src/nodecomx_cpp_py/include/lib/fftw/fftw-3.3.10/genfft/: Makefile
src/nodecomx_cpp_py/include/lib/fftw/fftw-3.3.10/kernel/: Makefile
src/nodecomx_cpp_py/include/lib/fftw/fftw-3.3.10/libbench2/: Makefile
src/nodecomx_cpp_py/include/lib/fftw/fftw-3.3.10/m4/: Makefile
src/nodecomx_cpp_py/include/lib/fftw/fftw-3.3.10/mpi/: Makefile
src/nodecomx_cpp_py/include/lib/fftw/fftw-3.3.10/rdft/: Makefile
src/nodecomx_cpp_py/include/lib/fftw/fftw-3.3.10/reodft/: Makefile
src/nodecomx_cpp_py/include/lib/fftw/fftw-3.3.10/simd-support/: Makefile
src/nodecomx_cpp_py/include/lib/fftw/fftw-3.3.10/support/: Makefile
src/nodecomx_cpp_py/include/lib/sdmsh/: sdmsh
src/nodecomx_cpp_py/nodecomx_cpp_py/: FP16_converter.py  algo.py  consensus.py  gradient_hessian_calculator.py  modem_info.py
src/nodecomx_cpp_py/scripts/: processing_node.py
src/nodecomx_cpp_py/src/: RX_node.cpp  TX_node.cpp  cpp_node.cpp  one_node.cpp  publisher.cpp  publisher_node.cpp  pubsub.cpp  subscriber_node.cpp  working.cpp
(+43 files in other folders)
